--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <div class="container text-center">
       <h1 class="mt-4">Welcome to Five Straight!</h1>
       <h2 class="mb-4">Join or create a game below.</h2>
-      <button class="create-room-btn btn btn-primary">Create Room</button>
+      <button class="create-room-btn btn btn-primary" disabled>Create Room</button>
 
       <div class="rooms-grid mt-5"></div>
     </div>
