--- a/public/room.html
+++ b/public/room.html
@@ -27,7 +27,7 @@
 
       <div class="game-board"></div>
 
-      <button class="start-btn btn blue m-3">Start Game</button>
+      <button class="start-btn btn blue m-3" disabled>Start Game</button>
       <button class="draw-btn btn blue m-3">Draw Card</button>
       <button class="restart-btn btn blue m-3">Restart Game</button>
       <button class="reset-btn btn blue m-3">Reset</button>
