--- a/public/room.html
+++ b/public/room.html
@@ -9,34 +9,44 @@
       integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
       crossorigin="anonymous"
     />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     <link rel="stylesheet" href="./css/styles.css" />
     <title>Five Straight</title>
   </head>
 
   <body>
-    <div class="container text-center">
-      <h1 class="turn-txt my-4">Waiting for game to begin</h1>
+    <nav>
+      <div class="material-icons settings-btn">settings</div>
+    </nav>
 
-      <div class="seats mb-3">
-        <form class="username-form mb-3" action="submit"></form>
+    <div class="container text-center">
+      <h1 class="turn-txt my-3">Waiting for game to begin</h1>
+      <div class="mobile log"></div>
+      <form class="username-form" action="submit"></form>
+
+      <div class="seats mt-3">
         <button class="player-1 orange sit-btn btn">Sit Down</button>
         <button class="player-2 teal sit-btn btn">Sit Down</button>
         <button class="player-3 orange sit-btn btn">Sit Down</button>
         <button class="player-4 teal sit-btn btn">Sit Down</button>
       </div>
 
-      <div class="game-board"></div>
+      <div class="game-grid mt-3">
+        <div class="game-board"></div>
 
-      <button class="start-btn btn blue m-3" disabled>Start Game</button>
-      <button class="draw-btn btn blue m-3">Draw Card</button>
-      <button class="restart-btn btn blue m-3">Restart Game</button>
-      <button class="reset-btn btn blue m-3">Reset</button>
+        <div class="game-buttons mt-3">
+          <button class="start-btn btn blue" disabled>Start Game</button>
+          <button class="draw-btn btn blue">Draw Card</button>
+          <button class="restart-btn btn blue">Restart Game</button>
+          <button class="reset-btn btn blue">Reset</button>
+        </div>
 
-      <div class="container">
-        <div class="cards-grid"></div>
+        <div class="cards-grid my-3"></div>
+
+        <div class="chat p-3">
+          <p>Game History</p>
+        </div>
       </div>
-
-      <div class="warning-text"></div>
     </div>
 
     <script src="/socket.io/socket.io.js"></script>
