--- a/public/room.html
+++ b/public/room.html
@@ -37,7 +37,7 @@
         <div class="game-buttons mt-3">
           <button class="start-btn btn blue" disabled>Start Game</button>
           <button class="draw-btn btn blue">Draw Card</button>
-          <button class="restart-btn btn blue">Restart Game</button>
+          <button class="restart-btn btn blue" disabled>Restart Game</button>
           <button class="reset-btn btn blue">Reset</button>
         </div>
 
