--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- <link rel="stylesheet" href="./css/styles.css" /> -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-    <title>Five Straight</title>
+    <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
 
   <body class="bg-gray-100 text-gray-800">
+    <noscript>
+      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+    </noscript>
+
     <div id="app"></div>
 
-    <script type="module" src="/src/main.js"></script>
     <!-- <script type="module" src="./js/index.js"></script> -->
   </body>
 </html>
